--- a/index.html
+++ b/index.html
@@ -379,15 +379,19 @@
 
     </div>
 
+    <section class="attribution">
+
+      <p class="attribution-paragraph">
+        Challenge by <a class="attribution-link" href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. 
+      </p>
+  
+      <p class="attribution-paragraph">
+        Coded by <a class="attribution-link" href="https://aimarbusta.netlify.app/" target="_blank"  rel="noopener noreferrer">Aimar Bustamante</a>.
+      </p>
+  
+    </section>
+
   </footer>
-
-
-  <!-- 
-    <p class="attribution">
-      Challenge by <a class="attribution" href="https://www.frontendmentor.io?ref=challenge" target="_blank" rel="noopener noreferrer">Frontend Mentor</a>. 
-      Coded by <a class="attribution" href="https://aimarbusta.netlify.app/" target="_blank" rel="noopener noreferrer">Aimar Bustamante</a>.
-    </p>
-  -->
 
 </body>
 </html>
